--- a/sles/core/Makefile
+++ b/sles/core/Makefile
@@ -29,7 +29,7 @@ Makefile: *.fst
 # ==============================================================================
 
 %.a: %.fst
-	fst-compiler $< $@
+	fst-compiler-utf8 $< $@
 
 %.ca: %.a
 	fst-compact $< $@
